--- a/Front_end/room.html
+++ b/Front_end/room.html
@@ -9,7 +9,12 @@
 
 <div class="room-container fade-in">
 
-    <h2 id="roomHeader">Room</h2>
+    <div class="header-row">
+        <h2 id="roomHeader">Room</h2>
+        <button id="copyBtn" class="btn small" onclick="copyToClipboard()">
+            Copy Link 📋
+        </button>
+    </div>
 
     <div class="status-box">
         <span>Connection Status:</span>
